logstash appender updated